Fix white spaces

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,14 @@
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+.social-contact-wrapper > *:first-child {
+  margin-bottom: -70px; /* Adjust this value to reduce space between Works and Social */
+}
+
+.social-contact-wrapper > .relative {
+  margin-top: -20px; /* Adjust this value to reduce space between Social and Contact */
+}
+
 .violet-gradient {
   background: #804dee;
   background: linear-gradient(-90deg, #804dee 0%, rgba(60, 51, 80, 0) 100%);
